fixed a layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ h6 {
 
 .img--rounded-frame{
   border-radius: 15px;
+  position: relative;
 }
+
 
 /* Back to top button */
 
